delete delededto, add genre entity, add mappers, add book and genre pages, add services, remove bootstrap, add css styles

--- a/RazorPagesLibraryProject/Pages/Index.cshtml
+++ b/RazorPagesLibraryProject/Pages/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="welcome-text">Welcome To Library</h1>
+    <p>Our History</p>
+    <div class="history-cont">
+        <p>Founded with a passion for literature and a vision to connect communities through the power of books, our library has been a cornerstone of knowledge and inspiration since its inception in 2005. From humble beginnings with a modest collection of 500 books, we have grown into a vibrant hub with over 50,000 titles, catering to readers of all ages and interests.</p>
+        <p>Over the years, we have expanded our offerings to include not only a wide range of books but also engaging events such as book clubs, literacy workshops, and author meet-and-greets. Our library is more than just a place to borrow books—it's a welcoming space where creativity flourishes, ideas are shared, and connections are made.</p>
+        <p>Each chapter of our story reflects our unwavering commitment to fostering a love for reading and lifelong learning, ensuring that our library remains a timeless treasure for generations to come.</p>
+    </div>
 </div>
