--- a/RazorPagesLibraryProject/wwwroot/css/site.css
+++ b/RazorPagesLibraryProject/wwwroot/css/site.css
@@ -25,6 +25,7 @@ html {
 
 header {
     border-bottom: 2px solid grey;
+    margin-bottom: 30px;
 }
 
 body {
@@ -65,6 +66,7 @@ a {
     color: inherit;
     font-style: italic;
     text-decoration: none;
+    transition: 0.3s ease;
 }
 
     a:hover {
@@ -96,6 +98,13 @@ a {
     margin: 0 auto;
 }
 
+.main-cont-div {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    gap: 20px
+}
+
 .text-center p {
     font-size: 30px;
 }
@@ -124,14 +133,21 @@ h2 {
 
 .history-cont p {
     font-size: 18px;
+    text-indent: 40px;
+    text-align: justify;
+    color: burlywood;
 }
 
 .history-cont {
-    max-width: 45%;
+    max-width: 30%;
     display: flex;
     gap: 10px;
     flex-direction: column;
-    margin: 20px 0px;
+}
+
+.history-title {
+    text-align: center;
+    font-style: italic;
 }
 
 .row {
@@ -267,4 +283,151 @@ h5 {
     .search-title-cont form {
         display: flex;
         gap: 5px;
+    }
+
+.books-ctn {
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+}
+
+.listed-books {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 30px;
+}
+
+.book-header {
+    width: 250px;
+    height: 400px;
+    cursor: pointer;
+}
+
+.book-ctn {
+    background-color: blanchedalmond;
+    border-radius: 10px;
+    transition: 0.3s ease;
+}
+    .book-ctn:hover {
+        transform: scale(1.1);
+    }
+
+    .books-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 30px 0px;
+    }
+
+.book-image {
+    display: flex;
+    justify-content: center;
+    margin-top: 3px;
+}
+
+    .book-image img {
+        height: 230px;
+        width: 200px;
+        border-radius: 10px;
+    }
+
+.book-nm, .book-at {
+    margin: 20px;
+    text-align: left;
+    font-size: 20px;
+    font-style: italic;
+}
+
+.book-at {
+    font-size: 15px;
+}
+
+.add-book form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    max-width: 200px;
+}
+
+.add-clear-btns {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.add-book h5 {
+    margin: 25px 0px;
+    text-align: left;
+}
+
+.slider {
+    position: relative;
+    max-width: 300px;
+    overflow: hidden;
+    border-radius: 10px;
+    height: 500px
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+}
+
+    .slide img {
+        width: 100%;
+        display: block;
+        height: 400px
+    }
+
+.prev,
+.next {
+    position: absolute;
+    top: 50%;
+    border-radius: 50%;
+    padding: 15px;
+    color: white;
+    background-color: black;
+    cursor: pointer;
+    transform: translateY(-50%);
+}
+
+.prev {
+    left: 15px;
+}
+
+.next {
+    right: 15px;
+}
+
+.book-img-ctn img {
+    height: 500px;
+    width: 400px;
+    border-radius: 15px
+}
+
+.book-container-div {
+    display: flex;
+    gap: 30px
+}
+
+.book-info-ctn {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 35px;
+    color: darksalmon;
+    font-style: italic;
+}
+
+    .book-info-ctn p span {
+        color: cornsilk;
+    }
+
+    footer{
+        margin-top: 40px;
     }
