add contact page

--- a/RazorPagesLibraryProject/Pages/Shared/_Layout.cshtml
+++ b/RazorPagesLibraryProject/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="navigation-link" asp-area="" asp-page="/AllBooksPage">Books</a>
                         </li>
                         <li class="nav-item">
+                            <a class="navigation-link" asp-area="" asp-page="/ContactPage">Contact</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="navigation-link" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
