--- a/RazorPagesLibraryProject/Pages/Index.cshtml
+++ b/RazorPagesLibraryProject/Pages/Index.cshtml
@@ -32,5 +32,7 @@
             <p>Each chapter of our story reflects our unwavering commitment to fostering a love for reading and lifelong learning, ensuring that our library remains a timeless treasure for generations to come.</p>
         </div>
     </div>
-
+    <a href="/UserPage">user</a>
+    <a href="/AdminPage">admin</a>
+    <a href="/ClientPage">client</a>
 </div>
