--- a/RazorPagesLibraryProject/Pages/BookPage.cshtml
+++ b/RazorPagesLibraryProject/Pages/BookPage.cshtml
@@ -26,8 +26,10 @@
                 <span>Availability:</span>
                 @(Model.InitialCount > 0 ? "Available" : "Unavailable")
             </p>
-            <div class="ctrl-btns-cont">
-                <form method="post" asp-page-handler="DeleteBook" id="delete-form-@Model.Id">
+             @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+            {
+                <div class="ctrl-btns-cont">
+                    <form method="post" asp-page-handler="DeleteBook" id="delete-form-@Model.Id">
                     <input type="hidden" name="id" value="@Model.Id" />
                     <button type="submit" class="ctrl-btn del-red" onclick="return confirmDelete();">
                         <i class="fas fa-trash-alt"></i>  Delete
@@ -59,6 +61,7 @@
                 </form>
 
             </div>
+            }
         </div>
     </div>
 </div>
