--- a/RazorPagesLibraryProject/Pages/Shared/_Layout.cshtml
+++ b/RazorPagesLibraryProject/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RazorPagesLibraryProject</title>
-@*     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
- *@    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    @*     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    *@
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RazorPagesLibraryProject.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -13,7 +14,7 @@
         <nav class="navbar">
             <div class="navbar-div">
                 <a class="main-logo" asp-area="" asp-page="/Index">
-                    <img src="./book.png" alt="Library Logo" style="height: 50px;"> Library
+                    <img src="./book.png"  style="height: 50px;"> Library
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -36,6 +37,7 @@
                         <li class="nav-item">
                             <a class="navigation-link" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
@@ -54,8 +56,9 @@
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-@*     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
- *@    <script src="~/js/site.js" asp-append-version="true"></script>
+    @*     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    *@
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
