--- a/RazorPagesLibraryProject/wwwroot/css/site.css
+++ b/RazorPagesLibraryProject/wwwroot/css/site.css
@@ -608,3 +608,39 @@ h6 {
     margin-top: 15px;
     text-align: left;
 }
+
+.privacy-heading {
+    text-align: center;
+}
+
+.privacy-ctn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    padding-bottom: 50px;
+    color: brown;
+    gap: 30px;
+    font-size: 20px;
+    background-color: cornsilk;
+    padding: 50px;
+}
+
+.indented {
+    text-indent: 50px;
+}
+
+.chapter-ctn ul li {
+    list-style: disc;
+    margin: 12px 0px 12px 40px;
+}
+
+.chapter-ctn {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.contact-link {
+    text-decoration: underline;
+}
